# igra-converter

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
data/: associations.txt  common_cities.txt  common_first_names.txt  common_last_names.txt  common_regions.txt  common_street_endings.txt  common_streets.txt
src/: api.rs  bktree.rs  main.rs  robin.rs  validation.rs  xbase.rs
web/: Contestant.js  Entry.js  Grid.js  Registration.js  app.js  index.html  style.css  utils.js
web/converter-app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/converter-app/src/: App.vue  main.ts  utils.js
web/converter-app/src/assets/: base.css  main.css
web/converter-app/src/components/: Accordion.vue  AddressCell.vue  DataCell.vue  DbRecordRow.vue  Entry.vue  EventRow.vue  Events.vue  Grid.vue  NotFound.vue  Pinger.vue  Registration.vue  Search.vue
