[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout = "3.1.3"
memmap2 = "0.5.10"
thiserror = "1.0.38"
chrono = { version = "0.4.23" }
log = "0.4"
env_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
