[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"

binary-layout = "3.1.3"
thiserror = "1.0.38"
chrono = { version = "0.4.23" }
log = "0.4"
env_logger = "0.10"
eddie = "0.4"
itertools = "0.11"
csv = "1.2.2"
phf = { version = "0.11.2", features = ["macros"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
